player input event + zp only work on player input